recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value lenght
		return (lenght:Double)
                        ^Koch:17: error: reassignment to val
		length = (length) / 3
                       ^